--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,20 @@
-name: Deploy dokku
+name: CD
 
 on:
   push:
     branches:
       - master
-
 jobs:
-  deploy:
+  build:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - id: deploy
-        name: Deploy to dokku
-        uses: idoberko2/dokku-deploy-github-action@v1
+      - uses: actions/checkout@v1
+      - name: Deploy the application
+        uses: landmaj/github-action-dokku@master
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          dokku-host: "134.122.15.24"
-          app-name: "my-dokku-test"
+          PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
+          HOST: ${{ secrets.DOKKU_HOST }}
+          PROJECT: "test-deploy-dokku"
+          BRANCH: master
